--- a/frontend/webbapp/package.json
+++ b/frontend/webbapp/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@types/googlemaps": "^3.43.3",
     "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
