--- a/frontend/webbapp/package.json
+++ b/frontend/webbapp/package.json
@@ -17,8 +17,10 @@
     "@types/googlemaps": "^3.43.3",
     "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.10.2",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
