--- a/frontend/webbapp/package.json
+++ b/frontend/webbapp/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/node": "^20.14.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-slick": "^0.23.13",
