--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.23.1"
+  },
+  "devDependencies": {
+    "@types/react-helmet-async": "^1.0.3"
   }
 }
